# v-rex

./: .cproject  .gitignore  .project  Makefile  Makefile.iup  Makefile.win64  README.md  main.c  main.iup.c.nocompile  run_cygwin_vrex.sh
src/: container_list_window.c  container_list_window.h  interactions_window.c  main.c  ps_window.c  ps_window.h  vrex_util.c  vrex_util.h
v-rex-motif/: .cproject  .dockerignore  .project  CMakeLists.txt  Dockerfile  Makefile  build_linux.sh  dependencies.md  main.working.motif.c.nocompile  run_docker.sh  set_cygwin_env.sh
v-rex-motif/docker_build/: Dockerfile  README.md  build_docker.sh
v-rex-motif/docker_build_base/: Dockerfile
v-rex-motif/src/: container_list_window.c  container_list_window.h  container_log_window.c  container_log_window.h  container_stats_window.c  container_stats_window.h  docker_server_window.c  docker_server_window.h  events_window.c  events_window.h  images_list_window.c  images_list_window.h  interactions_window.c  interactions_window.h  main.c  messages_window.c  messages_window.h  network_list_window.c  network_list_window.h  ps_window.c  ps_window.h  statusbar_window.c  statusbar_window.h  theme.c  theme.h  volumes_list_window.c  volumes_list_window.h  vrex_util.c  vrex_util.h
v-rex-win32/: .gitignore  v-rex-win32.sln
v-rex-win32/v-rex-win32/: Resource.h  v-rex-toolbar.cpp  v-rex-toolbar.h  v-rex-win32.aps  v-rex-win32.cpp  v-rex-win32.h  v-rex-win32.rc  v-rex-win32.vcxproj  v-rex-win32.vcxproj.filters  vrex-util.cpp  vrex-util.h
v-rex-win32/v-rex-win32/Debug/v-rex-win32.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  v-rex-win32.lastbuildstate
v-rex-win32/v-rex-win32/x64/Debug/: v-rex-win32.res
v-rex-win32/v-rex-win32/x64/Debug/v-rex-win32.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  v-rex-win32.lastbuildstate  v-rex-win32.write.1u.tlog
v-rex-wx/: CMakeLists.txt  build_linux.sh  build_macos.sh  build_win64.ps1
v-rex-wx/resources/: WebColours.csv  declarations.txt  web_colours_wx_decl.py
v-rex-wx/src/: ContainerDetailsWindow.cpp  ContainerDetailsWindow.h  ContainerDialog.cpp  ContainerDialog.h  ContainersWindow.cpp  ContainersWindow.h  DashboardWindow.cpp  DashboardWindow.h  DockerInteractionsWindow.cpp  DockerInteractionsWindow.h  DockerRequestThread.cpp  DockerRequestThread.h  ImagesWindow.cpp  ImagesWindow.h  NetworksWindow.cpp  NetworksWindow.h  VRexContext.cpp  VRexContext.h  VRexFrame.cpp  VRexFrame.h  VRexUtil.cpp  VRexUtil.h  VolumesWindow.cpp  VolumesWindow.h  containers_window.h  main.cpp  v-rex-main.cpp  vrex_util.c  vrex_util.cpp  vrex_util.h
